Worked on debugging analysis 2.1

--- a/analysis2.1.ipynb
+++ b/analysis2.1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "7ecb1932-a586-49bc-8b61-c3a1e0b84438",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "id": "57062785-b21d-45f6-993e-aa09d884fafa",
    "metadata": {},
    "outputs": [
@@ -112,7 +112,7 @@
        "[201 rows x 1 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,39 +157,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 16,
    "id": "ccbee0ed-2a8f-4ca5-8544-bf77e297ed35",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "False"
+       "nan"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df['norm'].isnull().sum() # counting total number of NaN's in df\n",
-    "np.isnan(np.sum(phi)) # returns true if there's at least one NaN in phi, false otherwise"
+    "# df['norm'].isnull().sum() # counting total number of NaN's in df\n",
+    "# np.isnan(np.sum(phi)) # returns true if there's at least one NaN in phi, false otherwise\n",
+    "df.at[101, 'norm']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 43,
    "id": "c83cc486-1904-4b22-a07e-928c09e21e17",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.33974957761887303"
+       "array([[[121, 121, 121],\n",
+       "        [121, 121, 121],\n",
+       "        [121, 121, 121],\n",
+       "        ...,\n",
+       "        [122, 122, 122],\n",
+       "        [122, 122, 122],\n",
+       "        [122, 122, 122]],\n",
+       "\n",
+       "       [[121, 121, 121],\n",
+       "        [121, 121, 121],\n",
+       "        [121, 121, 121],\n",
+       "        ...,\n",
+       "        [121, 121, 121],\n",
+       "        [121, 121, 121],\n",
+       "        [121, 121, 121]],\n",
+       "\n",
+       "       [[121, 121, 121],\n",
+       "        [121, 121, 121],\n",
+       "        [121, 121, 121],\n",
+       "        ...,\n",
+       "        [119, 119, 119],\n",
+       "        [119, 119, 119],\n",
+       "        [119, 119, 119]],\n",
+       "\n",
+       "       ...,\n",
+       "\n",
+       "       [[121, 121, 121],\n",
+       "        [121, 121, 121],\n",
+       "        [121, 121, 121],\n",
+       "        ...,\n",
+       "        [119, 119, 119],\n",
+       "        [119, 119, 119],\n",
+       "        [119, 119, 119]],\n",
+       "\n",
+       "       [[120, 120, 120],\n",
+       "        [120, 120, 120],\n",
+       "        [120, 120, 120],\n",
+       "        ...,\n",
+       "        [119, 119, 119],\n",
+       "        [119, 119, 119],\n",
+       "        [119, 119, 119]],\n",
+       "\n",
+       "       [[120, 120, 120],\n",
+       "        [120, 120, 120],\n",
+       "        [120, 120, 120],\n",
+       "        ...,\n",
+       "        [119, 119, 119],\n",
+       "        [119, 119, 119],\n",
+       "        [119, 119, 119]]], dtype=uint8)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,6 +247,7 @@
     "# Computing single norms without for loop\n",
     "i = 160\n",
     "\n",
+    "my_dpi = 192\n",
     "phi = np.load(\"Phi_201snap.npy\")\n",
     "arr = phi[:,:,i] \n",
     "plt.figure(figsize=(294/my_dpi, 165/my_dpi), dpi=my_dpi)\n",
@@ -217,8 +267,180 @@
     "    for j, col in enumerate(row):\n",
     "        copy[i][j] = convertRGBToRaw(col[0])\n",
     "norm = np.linalg.norm(copy - arr)\n",
-    "norm"
+    "output_array"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "23cdb53d-36b9-4472-8c56-ebe3147a2d1a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>norm</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>103</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>104</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>105</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>106</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>107</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>108 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    norm\n",
+       "0    NaN\n",
+       "1    NaN\n",
+       "2    NaN\n",
+       "3    NaN\n",
+       "4    NaN\n",
+       "..   ...\n",
+       "103  NaN\n",
+       "104  NaN\n",
+       "105  NaN\n",
+       "106  NaN\n",
+       "107  NaN\n",
+       "\n",
+       "[108 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Debugging attempt\n",
+    "n = 108\n",
+    "\n",
+    "# Load data and create dataframe\n",
+    "phi = np.load(\"Phi_201snap.npy\")\n",
+    "df = pd.DataFrame(columns=['norm'], index=np.arange(n))\n",
+    "\n",
+    "for i in range(n):\n",
+    "    arr = phi[:,:,i]\n",
+    "\n",
+    "    # Plot image (raw automatically converted to grayscale)\n",
+    "    plt.figure(figsize=(294/my_dpi, 165/my_dpi), dpi=my_dpi)\n",
+    "    plt.imshow(arr, cmap='gray')\n",
+    "    plt.axis(\"off\")\n",
+    "\n",
+    "    # Save as JPG and open again to convert to np array\n",
+    "    plt.savefig('analysis2.1.jpg', bbox_inches='tight', pad_inches=0)\n",
+    "    plt.close()\n",
+    "    im = Image.open('analysis2.1.jpg')\n",
+    "    output_array = np.asarray(im)\n",
+    "\n",
+    "    # Create convert function to use to convert output_array back to raw values\n",
+    "    phimax, phimin = np.max(arr), np.min(arr)\n",
+    "    ratio = (phimax-phimin)/255\n",
+    "    def convertRGBToRaw(x):\n",
+    "        return ratio*x + phimin\n",
+    "\n",
+    "    # Loop through output_array and replace RGB by raw in copy\n",
+    "    copy = arr.copy()\n",
+    "    for i, row in enumerate(output_array):\n",
+    "        for j, col in enumerate(row):\n",
+    "            copy[i][j] = convertRGBToRaw(col[0])\n",
+    "\n",
+    "    # Compute norm and add to dataframe\n",
+    "    diff = copy - arr\n",
+    "    norm = np.linalg.norm(diff)\n",
+    "    df.at[i, 'norm'] = norm\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "78192475-748a-4377-8df8-3e3c0281529b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['norm'].isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8535aa96-7848-4dff-9422-e6d1f7886ef9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
