--- a/analysis2.1.ipynb
+++ b/analysis2.1.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "id": "57062785-b21d-45f6-993e-aa09d884fafa",
    "metadata": {},
    "outputs": [
@@ -48,23 +48,23 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -72,23 +72,23 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>196</th>\n",
-       "      <td>NaN</td>\n",
+       "      <td>1.414913</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>197</th>\n",
-       "      <td>NaN</td>\n",
+       "      <td>1.557132</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>198</th>\n",
-       "      <td>NaN</td>\n",
+       "      <td>1.722431</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>199</th>\n",
-       "      <td>NaN</td>\n",
+       "      <td>1.913616</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>200</th>\n",
-       "      <td>NaN</td>\n",
+       "      <td>2.156553</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -96,23 +96,23 @@
        "</div>"
       ],
       "text/plain": [
-       "    norm\n",
-       "0    NaN\n",
-       "1    NaN\n",
-       "2    NaN\n",
-       "3    NaN\n",
-       "4    NaN\n",
-       "..   ...\n",
-       "196  NaN\n",
-       "197  NaN\n",
-       "198  NaN\n",
-       "199  NaN\n",
-       "200  NaN\n",
+       "         norm\n",
+       "0         0.0\n",
+       "1         0.0\n",
+       "2         0.0\n",
+       "3         0.0\n",
+       "4         0.0\n",
+       "..        ...\n",
+       "196  1.414913\n",
+       "197  1.557132\n",
+       "198  1.722431\n",
+       "199  1.913616\n",
+       "200  2.156553\n",
        "\n",
        "[201 rows x 1 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,9 +144,9 @@
     "\n",
     "    # Loop through output_array and replace RGB by raw in copy\n",
     "    copy = arr.copy()\n",
-    "    for i, row in enumerate(output_array):\n",
-    "        for j, col in enumerate(row):\n",
-    "            copy[i][j] = convertRGBToRaw(col[0])\n",
+    "    for row_index, row in enumerate(output_array):\n",
+    "        for col_index, col in enumerate(row):\n",
+    "            copy[row_index][col_index] = convertRGBToRaw(col[0])\n",
     "\n",
     "    # Compute norm and add to dataframe\n",
     "    diff = copy - arr\n",
@@ -157,25 +157,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "id": "ccbee0ed-2a8f-4ca5-8544-bf77e297ed35",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "nan"
+       "0"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# df['norm'].isnull().sum() # counting total number of NaN's in df\n",
-    "# np.isnan(np.sum(phi)) # returns true if there's at least one NaN in phi, false otherwise\n",
-    "df.at[101, 'norm']"
+    "df['norm'].isnull().sum() # counting total number of NaN's in df\n",
+    "# np.isnan(np.sum(phi)) # returns true if there's at least one NaN in phi, false otherwise"
    ]
   },
   {
