--- a/analysis2.2.ipynb
+++ b/analysis2.2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "cb160bd1-3f11-4e00-b96d-912708061b0d",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "id": "9b31bfd3-7a9d-4db3-881d-ea35e8e6ab74",
    "metadata": {},
    "outputs": [
@@ -49,71 +49,71 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>196</th>\n",
+       "      <td>1.566593</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>197</th>\n",
-       "      <td>NaN</td>\n",
+       "      <td>1.716032</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>198</th>\n",
-       "      <td>NaN</td>\n",
+       "      <td>1.905204</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>199</th>\n",
-       "      <td>NaN</td>\n",
+       "      <td>2.1229</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>200</th>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>202</th>\n",
        "      <td>2.3852</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>202 rows × 1 columns</p>\n",
+       "<p>201 rows × 1 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "       norm\n",
-       "0       NaN\n",
-       "1       NaN\n",
-       "2       NaN\n",
-       "3       NaN\n",
-       "4       NaN\n",
-       "..      ...\n",
-       "197     NaN\n",
-       "198     NaN\n",
-       "199     NaN\n",
-       "200     NaN\n",
-       "202  2.3852\n",
+       "         norm\n",
+       "0         0.0\n",
+       "1         0.0\n",
+       "2         0.0\n",
+       "3         0.0\n",
+       "4         0.0\n",
+       "..        ...\n",
+       "196  1.566593\n",
+       "197  1.716032\n",
+       "198  1.905204\n",
+       "199    2.1229\n",
+       "200    2.3852\n",
        "\n",
-       "[202 rows x 1 columns]"
+       "[201 rows x 1 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,9 +161,9 @@
     "\n",
     "    # Loop through im_array and replace RGB by raw in copy (203x203)\n",
     "    copy = grid_z.copy()\n",
-    "    for i, row in enumerate(im_array):\n",
-    "        for j, col in enumerate(row):\n",
-    "            copy[i][j] = convertRGBToRaw(col[0])\n",
+    "    for row_index, row in enumerate(im_array):\n",
+    "        for col_index, col in enumerate(row):\n",
+    "            copy[row_index][col_index] = convertRGBToRaw(col[0])\n",
     "\n",
     "    # Get output_array from copy by computing nearest pixels\n",
     "    output_array = np.zeros((101, 227))\n",
@@ -189,6 +189,27 @@
     "    norm = np.linalg.norm(diff_array)\n",
     "    df.at[i, 'norm'] = norm\n",
     "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "80c50892-13d3-4546-9765-fb5cee5925c4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['norm'].isnull().sum()"
    ]
   },
   {
@@ -277,77 +298,6 @@
     "norm = np.linalg.norm(diff_array)\n",
     "norm"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "00c1df82-7ff9-4fa6-926e-99389ca740b9",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(101, 227, 3)"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "im_array.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "43bc6860-0daa-4384-9010-f2821dd152cc",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(203, 203)"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "copy.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "5af7ecb4-a49c-406d-8e85-cf01093a411c",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(203, 203)"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "grid_z.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ba1e993f-c026-4a15-91a6-e370ee5da078",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
