--- a/analysis2.1.ipynb
+++ b/analysis2.1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "id": "7ecb1932-a586-49bc-8b61-c3a1e0b84438",
    "metadata": {},
    "outputs": [],
@@ -10,6 +10,7 @@
     "import numpy as np \n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
+    "import os\n",
     "from PIL import Image\n",
     "\n",
     "my_dpi = 192"
@@ -17,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "id": "57062785-b21d-45f6-993e-aa09d884fafa",
    "metadata": {},
    "outputs": [
@@ -42,77 +43,89 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>compression ratio</th>\n",
        "      <th>norm</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>4.148863</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>4.128169</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>3.985854</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>3.891004</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>3.999041</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>196</th>\n",
+       "      <td>3.425889</td>\n",
        "      <td>1.414913</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>197</th>\n",
+       "      <td>3.333994</td>\n",
        "      <td>1.557132</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>198</th>\n",
+       "      <td>3.298053</td>\n",
        "      <td>1.722431</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>199</th>\n",
+       "      <td>3.361852</td>\n",
        "      <td>1.913616</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>200</th>\n",
+       "      <td>3.387097</td>\n",
        "      <td>2.156553</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>201 rows × 1 columns</p>\n",
+       "<p>201 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "         norm\n",
-       "0         0.0\n",
-       "1         0.0\n",
-       "2         0.0\n",
-       "3         0.0\n",
-       "4         0.0\n",
-       "..        ...\n",
-       "196  1.414913\n",
-       "197  1.557132\n",
-       "198  1.722431\n",
-       "199  1.913616\n",
-       "200  2.156553\n",
+       "    compression ratio      norm\n",
+       "0            4.148863       0.0\n",
+       "1            4.128169       0.0\n",
+       "2            3.985854       0.0\n",
+       "3            3.891004       0.0\n",
+       "4            3.999041       0.0\n",
+       "..                ...       ...\n",
+       "196          3.425889  1.414913\n",
+       "197          3.333994  1.557132\n",
+       "198          3.298053  1.722431\n",
+       "199          3.361852  1.913616\n",
+       "200          3.387097  2.156553\n",
        "\n",
-       "[201 rows x 1 columns]"
+       "[201 rows x 2 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,7 +133,7 @@
    "source": [
     "# Load data and create dataframe\n",
     "phi = np.load(\"Phi_201snap.npy\")\n",
-    "df = pd.DataFrame(columns=['norm'], index=np.arange(201))\n",
+    "df = pd.DataFrame(columns=['compression ratio', 'norm'], index=np.arange(201))\n",
     "\n",
     "for i in range(201):\n",
     "    arr = phi[:,:,i]\n",
@@ -130,7 +143,8 @@
     "    plt.imshow(arr, cmap='gray')\n",
     "    plt.axis(\"off\")\n",
     "\n",
-    "    # Save as JPG and open again to convert to np array\n",
+    "    # Save as PNG & JPG and open JPG again to convert to np array\n",
+    "    plt.savefig('analysis2.1.png', bbox_inches='tight', pad_inches=0)\n",
     "    plt.savefig('analysis2.1.jpg', bbox_inches='tight', pad_inches=0)\n",
     "    plt.close()\n",
     "    im = Image.open('analysis2.1.jpg')\n",
@@ -148,7 +162,11 @@
     "        for col_index, col in enumerate(row):\n",
     "            copy[row_index][col_index] = convertRGBToRaw(col[0])\n",
     "\n",
-    "    # Compute norm and add to dataframe\n",
+    "    # Compute norm and compression ratio and add to dataframe\n",
+    "    in_imsize = os.stat('analysis2.1.png').st_size\n",
+    "    out_imsize = os.stat('analysis2.1.jpg').st_size\n",
+    "    df.at[i, 'compression ratio'] = in_imsize/out_imsize\n",
+    "    \n",
     "    diff = copy - arr\n",
     "    norm = np.linalg.norm(diff)\n",
     "    df.at[i, 'norm'] = norm\n",
@@ -179,72 +197,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 5,
    "id": "c83cc486-1904-4b22-a07e-928c09e21e17",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[[121, 121, 121],\n",
-       "        [121, 121, 121],\n",
-       "        [121, 121, 121],\n",
-       "        ...,\n",
-       "        [122, 122, 122],\n",
-       "        [122, 122, 122],\n",
-       "        [122, 122, 122]],\n",
-       "\n",
-       "       [[121, 121, 121],\n",
-       "        [121, 121, 121],\n",
-       "        [121, 121, 121],\n",
-       "        ...,\n",
-       "        [121, 121, 121],\n",
-       "        [121, 121, 121],\n",
-       "        [121, 121, 121]],\n",
-       "\n",
-       "       [[121, 121, 121],\n",
-       "        [121, 121, 121],\n",
-       "        [121, 121, 121],\n",
-       "        ...,\n",
-       "        [119, 119, 119],\n",
-       "        [119, 119, 119],\n",
-       "        [119, 119, 119]],\n",
-       "\n",
-       "       ...,\n",
-       "\n",
-       "       [[121, 121, 121],\n",
-       "        [121, 121, 121],\n",
-       "        [121, 121, 121],\n",
-       "        ...,\n",
-       "        [119, 119, 119],\n",
-       "        [119, 119, 119],\n",
-       "        [119, 119, 119]],\n",
-       "\n",
-       "       [[120, 120, 120],\n",
-       "        [120, 120, 120],\n",
-       "        [120, 120, 120],\n",
-       "        ...,\n",
-       "        [119, 119, 119],\n",
-       "        [119, 119, 119],\n",
-       "        [119, 119, 119]],\n",
-       "\n",
-       "       [[120, 120, 120],\n",
-       "        [120, 120, 120],\n",
-       "        [120, 120, 120],\n",
-       "        ...,\n",
-       "        [119, 119, 119],\n",
-       "        [119, 119, 119],\n",
-       "        [119, 119, 119]]], dtype=uint8)"
+       "1.3469364304465263e-08"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Computing single norms without for loop\n",
-    "i = 160\n",
+    "i = 0\n",
     "\n",
     "my_dpi = 192\n",
     "phi = np.load(\"Phi_201snap.npy\")\n",
@@ -266,180 +236,8 @@
     "    for j, col in enumerate(row):\n",
     "        copy[i][j] = convertRGBToRaw(col[0])\n",
     "norm = np.linalg.norm(copy - arr)\n",
-    "output_array"
+    "norm"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "id": "23cdb53d-36b9-4472-8c56-ebe3147a2d1a",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>norm</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>103</th>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>104</th>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>105</th>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>106</th>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>107</th>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>108 rows × 1 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    norm\n",
-       "0    NaN\n",
-       "1    NaN\n",
-       "2    NaN\n",
-       "3    NaN\n",
-       "4    NaN\n",
-       "..   ...\n",
-       "103  NaN\n",
-       "104  NaN\n",
-       "105  NaN\n",
-       "106  NaN\n",
-       "107  NaN\n",
-       "\n",
-       "[108 rows x 1 columns]"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Debugging attempt\n",
-    "n = 108\n",
-    "\n",
-    "# Load data and create dataframe\n",
-    "phi = np.load(\"Phi_201snap.npy\")\n",
-    "df = pd.DataFrame(columns=['norm'], index=np.arange(n))\n",
-    "\n",
-    "for i in range(n):\n",
-    "    arr = phi[:,:,i]\n",
-    "\n",
-    "    # Plot image (raw automatically converted to grayscale)\n",
-    "    plt.figure(figsize=(294/my_dpi, 165/my_dpi), dpi=my_dpi)\n",
-    "    plt.imshow(arr, cmap='gray')\n",
-    "    plt.axis(\"off\")\n",
-    "\n",
-    "    # Save as JPG and open again to convert to np array\n",
-    "    plt.savefig('analysis2.1.jpg', bbox_inches='tight', pad_inches=0)\n",
-    "    plt.close()\n",
-    "    im = Image.open('analysis2.1.jpg')\n",
-    "    output_array = np.asarray(im)\n",
-    "\n",
-    "    # Create convert function to use to convert output_array back to raw values\n",
-    "    phimax, phimin = np.max(arr), np.min(arr)\n",
-    "    ratio = (phimax-phimin)/255\n",
-    "    def convertRGBToRaw(x):\n",
-    "        return ratio*x + phimin\n",
-    "\n",
-    "    # Loop through output_array and replace RGB by raw in copy\n",
-    "    copy = arr.copy()\n",
-    "    for i, row in enumerate(output_array):\n",
-    "        for j, col in enumerate(row):\n",
-    "            copy[i][j] = convertRGBToRaw(col[0])\n",
-    "\n",
-    "    # Compute norm and add to dataframe\n",
-    "    diff = copy - arr\n",
-    "    norm = np.linalg.norm(diff)\n",
-    "    df.at[i, 'norm'] = norm\n",
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "78192475-748a-4377-8df8-3e3c0281529b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df['norm'].isnull().sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8535aa96-7848-4dff-9422-e6d1f7886ef9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
