--- a/analysis2.2.ipynb
+++ b/analysis2.2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "cb160bd1-3f11-4e00-b96d-912708061b0d",
    "metadata": {},
    "outputs": [],
@@ -10,6 +10,7 @@
     "import numpy as np \n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
+    "import os\n",
     "from scipy.interpolate import griddata\n",
     "from PIL import Image\n",
     "\n",
@@ -18,110 +19,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "9b31bfd3-7a9d-4db3-881d-ea35e8e6ab74",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>norm</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>196</th>\n",
-       "      <td>1.566593</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>197</th>\n",
-       "      <td>1.716032</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>198</th>\n",
-       "      <td>1.905204</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>199</th>\n",
-       "      <td>2.1229</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>200</th>\n",
-       "      <td>2.3852</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>201 rows × 1 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         norm\n",
-       "0         0.0\n",
-       "1         0.0\n",
-       "2         0.0\n",
-       "3         0.0\n",
-       "4         0.0\n",
-       "..        ...\n",
-       "196  1.566593\n",
-       "197  1.716032\n",
-       "198  1.905204\n",
-       "199    2.1229\n",
-       "200    2.3852\n",
-       "\n",
-       "[201 rows x 1 columns]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Load in array of 201 images, create dataframe\n",
     "phi = np.load(\"Phi_201snap.npy\")\n",
-    "df = pd.DataFrame(columns=['norm'], index=np.arange(201))\n",
+    "df = pd.DataFrame(columns=['compression ratio', 'norm'], index=np.arange(201))\n",
     "\n",
     "r = np.linspace(1, 101, 101)\n",
     "theta = np.linspace(0, 2 * np.pi, 227)\n",
@@ -144,10 +49,11 @@
     "    # Interpolate the data to the Cartesian grid\n",
     "    grid_z = griddata(points, values, (grid_x, grid_y), method='nearest')\n",
     "    \n",
-    "    # Plot and save image as JPG, reopen as np array\n",
+    "    # Plot and save image as PNG and JPG, reopen JPG as np array\n",
     "    plt.figure(figsize=(264/my_dpi, 264/my_dpi), dpi=my_dpi)\n",
     "    plt.imshow(grid_z, extent=(-101, 101, -101, 101), cmap='gray')\n",
     "    plt.axis(\"off\")\n",
+    "    plt.savefig('analysis2.2.png', bbox_inches='tight', pad_inches=0)\n",
     "    plt.savefig('analysis2.2.jpg', bbox_inches='tight', pad_inches=0)\n",
     "    plt.close()\n",
     "    im = Image.open('analysis2.2.jpg')\n",
@@ -184,7 +90,11 @@
     "            # Get the raw values from copy and put into output array\n",
     "            output_array[rad, ang] = copy[y_nearest, x_nearest]\n",
     "            \n",
-    "    # Compute norm, add to dataframe\n",
+    "    # Compute compression ratio and norm, add to dataframe\n",
+    "    in_imsize = os.stat('analysis2.2.png').st_size\n",
+    "    out_imsize = os.stat('analysis2.2.jpg').st_size\n",
+    "    df.at[i, 'compression ratio'] = in_imsize/out_imsize\n",
+    "    \n",
     "    diff_array = output_array - arr\n",
     "    norm = np.linalg.norm(diff_array)\n",
     "    df.at[i, 'norm'] = norm\n",
