--- a/analysis2.3.ipynb
+++ b/analysis2.3.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "8ae75a7b-4315-45f2-82c4-8fcd379d8fa6",
    "metadata": {},
    "outputs": [
@@ -120,7 +120,7 @@
        "[201 rows x 2 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,7 +128,7 @@
    "source": [
     "# Load data and create dataframe\n",
     "phi = np.load(\"Phi_201snap.npy\")\n",
-    "df = pd.DataFrame(columns=['norm32', 'norm16'], index=np.arange(201))\n",
+    "df1 = pd.DataFrame(columns=['norm32', 'norm16'], index=np.arange(201))\n",
     "\n",
     "for i in range(201):\n",
     "    arr = phi[:,:,i]\n",
@@ -142,10 +142,10 @@
     "    # Compute norms and add to dataframe\n",
     "    norm32 = np.linalg.norm(arr - arr32)\n",
     "    norm16 = np.linalg.norm(arr - arr16)\n",
-    "    df.at[i, 'norm32'] = norm32\n",
-    "    df.at[i, 'norm16'] = norm16\n",
+    "    df1.at[i, 'norm32'] = norm32\n",
+    "    df1.at[i, 'norm16'] = norm16\n",
     "\n",
-    "df"
+    "df1"
    ]
   },
   {
@@ -174,8 +174,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "id": "542568c4-a4ec-4f49-8ade-9ab415bd3f9d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stored 'df1' (DataFrame)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%store df1"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "3628850b-fdc4-4917-aa65-983fe6eca9f1",
+   "id": "b9ea5c64-36a8-4c9e-b4c9-553fed21215a",
    "metadata": {},
    "outputs": [],
    "source": []
