Create new notebook to combine results from analysis2.1-2.3. Merge dataframes together and work on creating separate and combined plots.

--- a/analysis2.1.ipynb
+++ b/analysis2.1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "7ecb1932-a586-49bc-8b61-c3a1e0b84438",
    "metadata": {},
    "outputs": [],
@@ -18,122 +18,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "id": "57062785-b21d-45f6-993e-aa09d884fafa",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>compression ratio</th>\n",
-       "      <th>norm</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>4.148863</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>4.128169</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3.985854</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3.891004</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>3.999041</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>196</th>\n",
-       "      <td>3.425889</td>\n",
-       "      <td>1.414913</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>197</th>\n",
-       "      <td>3.333994</td>\n",
-       "      <td>1.557132</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>198</th>\n",
-       "      <td>3.298053</td>\n",
-       "      <td>1.722431</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>199</th>\n",
-       "      <td>3.361852</td>\n",
-       "      <td>1.913616</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>200</th>\n",
-       "      <td>3.387097</td>\n",
-       "      <td>2.156553</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>201 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    compression ratio      norm\n",
-       "0            4.148863       0.0\n",
-       "1            4.128169       0.0\n",
-       "2            3.985854       0.0\n",
-       "3            3.891004       0.0\n",
-       "4            3.999041       0.0\n",
-       "..                ...       ...\n",
-       "196          3.425889  1.414913\n",
-       "197          3.333994  1.557132\n",
-       "198          3.298053  1.722431\n",
-       "199          3.361852  1.913616\n",
-       "200          3.387097  2.156553\n",
-       "\n",
-       "[201 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Load data and create dataframe\n",
     "phi = np.load(\"Phi_201snap.npy\")\n",
-    "df = pd.DataFrame(columns=['compression ratio', 'norm'], index=np.arange(201))\n",
+    "df = pd.DataFrame(columns=['CR2.1', 'norm2.1'], index=np.arange(201))\n",
     "\n",
     "for i in range(201):\n",
     "    arr = phi[:,:,i]\n",
@@ -165,34 +57,12 @@
     "    # Compute norm and compression ratio and add to dataframe\n",
     "    in_imsize = os.stat('analysis2.1.png').st_size\n",
     "    out_imsize = os.stat('analysis2.1.jpg').st_size\n",
-    "    df.at[i, 'compression ratio'] = in_imsize/out_imsize\n",
+    "    df.at[i, 'CR2.1'] = in_imsize/out_imsize\n",
     "    \n",
     "    diff = copy - arr\n",
     "    norm = np.linalg.norm(diff)\n",
-    "    df.at[i, 'norm'] = norm\n",
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "ccbee0ed-2a8f-4ca5-8544-bf77e297ed35",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df['norm'].isnull().sum() # counting total number of NaN's in df\n",
-    "# np.isnan(np.sum(phi)) # returns true if there's at least one NaN in phi, false otherwise"
+    "    df.at[i, 'norm2.1'] = norm\n",
+    "df.to_pickle(\"analysis2.1.pkl\")"
    ]
   },
   {
