--- a/analysis2.2.ipynb
+++ b/analysis2.2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "cb160bd1-3f11-4e00-b96d-912708061b0d",
    "metadata": {},
    "outputs": [],
@@ -19,14 +19,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "9b31bfd3-7a9d-4db3-881d-ea35e8e6ab74",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load in array of 201 images, create dataframe\n",
     "phi = np.load(\"Phi_201snap.npy\")\n",
-    "df = pd.DataFrame(columns=['compression ratio', 'norm'], index=np.arange(201))\n",
+    "df = pd.DataFrame(columns=['CR2.2', 'norm2.2'], index=np.arange(201))\n",
     "\n",
     "r = np.linspace(1, 101, 101)\n",
     "theta = np.linspace(0, 2 * np.pi, 227)\n",
@@ -93,33 +93,12 @@
     "    # Compute compression ratio and norm, add to dataframe\n",
     "    in_imsize = os.stat('analysis2.2.png').st_size\n",
     "    out_imsize = os.stat('analysis2.2.jpg').st_size\n",
-    "    df.at[i, 'compression ratio'] = in_imsize/out_imsize\n",
+    "    df.at[i, 'CR2.2'] = in_imsize/out_imsize\n",
     "    \n",
     "    diff_array = output_array - arr\n",
     "    norm = np.linalg.norm(diff_array)\n",
-    "    df.at[i, 'norm'] = norm\n",
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "80c50892-13d3-4546-9765-fb5cee5925c4",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df['norm'].isnull().sum()"
+    "    df.at[i, 'norm2.2'] = norm\n",
+    "df.to_pickle(\"analysis2.2.pkl\")"
    ]
   },
   {
