--- a/analysis2.3.ipynb
+++ b/analysis2.3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "40c5b294-5219-4620-a954-f45a078c036c",
    "metadata": {},
    "outputs": [],
@@ -13,122 +13,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "8ae75a7b-4315-45f2-82c4-8fcd379d8fa6",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>norm32</th>\n",
-       "      <th>norm16</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.000001</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>196</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.004012</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>197</th>\n",
-       "      <td>0.000001</td>\n",
-       "      <td>0.004319</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>198</th>\n",
-       "      <td>0.000001</td>\n",
-       "      <td>0.005209</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>199</th>\n",
-       "      <td>0.000001</td>\n",
-       "      <td>0.005853</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>200</th>\n",
-       "      <td>0.000001</td>\n",
-       "      <td>0.007262</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>201 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       norm32    norm16\n",
-       "0         0.0  0.000001\n",
-       "1         0.0       0.0\n",
-       "2         0.0       0.0\n",
-       "3         0.0       0.0\n",
-       "4         0.0       0.0\n",
-       "..        ...       ...\n",
-       "196       0.0  0.004012\n",
-       "197  0.000001  0.004319\n",
-       "198  0.000001  0.005209\n",
-       "199  0.000001  0.005853\n",
-       "200  0.000001  0.007262\n",
-       "\n",
-       "[201 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Load data and create dataframe\n",
     "phi = np.load(\"Phi_201snap.npy\")\n",
-    "df1 = pd.DataFrame(columns=['norm32', 'norm16'], index=np.arange(201))\n",
+    "df = pd.DataFrame(columns=['norm32', 'norm16'], index=np.arange(201))\n",
     "\n",
     "for i in range(201):\n",
     "    arr = phi[:,:,i]\n",
@@ -142,10 +34,9 @@
     "    # Compute norms and add to dataframe\n",
     "    norm32 = np.linalg.norm(arr - arr32)\n",
     "    norm16 = np.linalg.norm(arr - arr16)\n",
-    "    df1.at[i, 'norm32'] = norm32\n",
-    "    df1.at[i, 'norm16'] = norm16\n",
-    "\n",
-    "df1"
+    "    df.at[i, 'norm32'] = norm32\n",
+    "    df.at[i, 'norm16'] = norm16\n",
+    "df.to_pickle(\"analysis2.3.pkl\")"
    ]
   },
   {
