Convert all norms across all analyses to RMSE

--- a/analysis2.1.ipynb
+++ b/analysis2.1.ipynb
@@ -25,7 +25,7 @@
    "source": [
     "# Load data and create dataframe\n",
     "phi = np.load(\"Phi_201snap.npy\")\n",
-    "df = pd.DataFrame(columns=['CR2.1', 'norm2.1'], index=np.arange(201))\n",
+    "df = pd.DataFrame(columns=['CR2.1', 'RMSE2.1'], index=np.arange(201))\n",
     "\n",
     "for i in range(201):\n",
     "    arr = phi[:,:,i]\n",
@@ -60,8 +60,8 @@
     "    df.at[i, 'CR2.1'] = in_imsize/out_imsize\n",
     "    \n",
     "    diff = copy - arr\n",
-    "    norm = np.linalg.norm(diff)\n",
-    "    df.at[i, 'norm2.1'] = norm\n",
+    "    rmse = np.sqrt(np.mean(diff**2))\n",
+    "    df.at[i, 'RMSE2.1'] = rmse\n",
     "df.to_pickle(\"analysis2.1.pkl\")"
    ]
   },
