--- a/analysis2.2.ipynb
+++ b/analysis2.2.ipynb
@@ -26,7 +26,7 @@
    "source": [
     "# Load in array of 201 images, create dataframe\n",
     "phi = np.load(\"Phi_201snap.npy\")\n",
-    "df = pd.DataFrame(columns=['CR2.2', 'norm2.2'], index=np.arange(201))\n",
+    "df = pd.DataFrame(columns=['CR2.2', 'RMSE2.2'], index=np.arange(201))\n",
     "\n",
     "r = np.linspace(1, 101, 101)\n",
     "theta = np.linspace(0, 2 * np.pi, 227)\n",
@@ -96,8 +96,8 @@
     "    df.at[i, 'CR2.2'] = in_imsize/out_imsize\n",
     "    \n",
     "    diff_array = output_array - arr\n",
-    "    norm = np.linalg.norm(diff_array)\n",
-    "    df.at[i, 'norm2.2'] = norm\n",
+    "    rmse = np.sqrt(np.mean(diff_array**2))\n",
+    "    df.at[i, 'RMSE2.2'] = rmse\n",
     "df.to_pickle(\"analysis2.2.pkl\")"
    ]
   },
