--- a/analysis2.3.ipynb
+++ b/analysis2.3.ipynb
@@ -20,7 +20,7 @@
    "source": [
     "# Load data and create dataframe\n",
     "phi = np.load(\"Phi_201snap.npy\")\n",
-    "df = pd.DataFrame(columns=['norm32', 'norm16'], index=np.arange(201))\n",
+    "df = pd.DataFrame(columns=['RMSE32', 'norm16'], index=np.arange(201))\n",
     "\n",
     "for i in range(201):\n",
     "    arr = phi[:,:,i]\n",
@@ -62,32 +62,6 @@
     "z = np.float32(example)\n",
     "np.array_equal(example, y), np.array_equal(example, z)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "542568c4-a4ec-4f49-8ade-9ab415bd3f9d",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Stored 'df1' (DataFrame)\n"
-     ]
-    }
-   ],
-   "source": [
-    "%store df1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b9ea5c64-36a8-4c9e-b4c9-553fed21215a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
