--- a/analysis2.3.ipynb
+++ b/analysis2.3.ipynb
@@ -20,7 +20,7 @@
    "source": [
     "# Load data and create dataframe\n",
     "phi = np.load(\"Phi_201snap.npy\")\n",
-    "df = pd.DataFrame(columns=['RMSE32', 'norm16'], index=np.arange(201))\n",
+    "df = pd.DataFrame(columns=['RMSE32', 'RMSE16'], index=np.arange(201))\n",
     "\n",
     "for i in range(201):\n",
     "    arr = phi[:,:,i]\n",
@@ -32,10 +32,10 @@
     "    arr16 = np.float64(np.float16(arr))\n",
     "\n",
     "    # Compute norms and add to dataframe\n",
-    "    norm32 = np.linalg.norm(arr - arr32)\n",
-    "    norm16 = np.linalg.norm(arr - arr16)\n",
-    "    df.at[i, 'norm32'] = norm32\n",
-    "    df.at[i, 'norm16'] = norm16\n",
+    "    rmse32 = np.sqrt(np.mean((arr-arr32)**2))\n",
+    "    rmse16 = np.sqrt(np.mean((arr-arr16)**2))\n",
+    "    df.at[i, 'RMSE32'] = rmse32\n",
+    "    df.at[i, 'RMSE16'] = rmse16\n",
     "df.to_pickle(\"analysis2.3.pkl\")"
    ]
   },
