Check resulting float type after addition of float32 and float64, change all graphs to RMSE vs. CR and x-axis to log scale

--- a/analysis2.2.ipynb
+++ b/analysis2.2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "cb160bd1-3f11-4e00-b96d-912708061b0d",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "9b31bfd3-7a9d-4db3-881d-ea35e8e6ab74",
    "metadata": {},
    "outputs": [],
@@ -90,7 +90,7 @@
     "            # Get the raw values from copy and put into output array\n",
     "            output_array[rad, ang] = copy[y_nearest, x_nearest]\n",
     "            \n",
-    "    # Compute compression ratio and norm, add to dataframe\n",
+    "    # Compute compression ratio and RMSE's, add to dataframe\n",
     "    in_imsize = os.stat('analysis2.2.png').st_size\n",
     "    out_imsize = os.stat('analysis2.2.jpg').st_size\n",
     "    df.at[i, 'CR2.2'] = in_imsize/out_imsize\n",
