--- a/misc.ipynb
+++ b/misc.ipynb
@@ -13,17 +13,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "a3123f8a-2154-46ab-af39-59a4e0dbb29d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "8.000027775806709"
+       "(8.000027775806709, 36866744)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -32,9 +32,9 @@
     "# Confirming that the size of the elements in phi is actually 64b\n",
     "\n",
     "phi = np.load(\"Phi_201snap.npy\")\n",
-    "size = os.stat('Phi_201snap.npy').st_size\n",
+    "size = os.path.getsize('Phi_201snap.npy')\n",
     "one_element_size = size/(101*227*201)\n",
-    "one_element_size"
+    "one_element_size, size"
    ]
   },
   {
