--- a/analysis2.1.ipynb
+++ b/analysis2.1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "id": "7ecb1932-a586-49bc-8b61-c3a1e0b84438",
    "metadata": {},
    "outputs": [],
@@ -18,10 +18,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "id": "57062785-b21d-45f6-993e-aa09d884fafa",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CR2.1</th>\n",
+       "      <th>RMSE2.1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4.148863</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4.128169</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3.985854</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3.891004</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3.999041</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>196</th>\n",
+       "      <td>3.425889</td>\n",
+       "      <td>0.009345</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>197</th>\n",
+       "      <td>3.333994</td>\n",
+       "      <td>0.010284</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>198</th>\n",
+       "      <td>3.298053</td>\n",
+       "      <td>0.011375</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>199</th>\n",
+       "      <td>3.361852</td>\n",
+       "      <td>0.012638</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>200</th>\n",
+       "      <td>3.387097</td>\n",
+       "      <td>0.014243</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>201 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        CR2.1   RMSE2.1\n",
+       "0    4.148863       0.0\n",
+       "1    4.128169       0.0\n",
+       "2    3.985854       0.0\n",
+       "3    3.891004       0.0\n",
+       "4    3.999041       0.0\n",
+       "..        ...       ...\n",
+       "196  3.425889  0.009345\n",
+       "197  3.333994  0.010284\n",
+       "198  3.298053  0.011375\n",
+       "199  3.361852  0.012638\n",
+       "200  3.387097  0.014243\n",
+       "\n",
+       "[201 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Load data and create dataframe\n",
     "phi = np.load(\"Phi_201snap.npy\")\n",
@@ -54,7 +162,7 @@
     "        for col_index, col in enumerate(row):\n",
     "            copy[row_index][col_index] = convertRGBToRaw(col[0])\n",
     "\n",
-    "    # Compute norm and compression ratio and add to dataframe\n",
+    "    # Compute RMSE's and compression ratio and add to dataframe\n",
     "    in_imsize = os.stat('analysis2.1.png').st_size\n",
     "    out_imsize = os.stat('analysis2.1.jpg').st_size\n",
     "    df.at[i, 'CR2.1'] = in_imsize/out_imsize\n",
@@ -62,7 +170,7 @@
     "    diff = copy - arr\n",
     "    rmse = np.sqrt(np.mean(diff**2))\n",
     "    df.at[i, 'RMSE2.1'] = rmse\n",
-    "df.to_pickle(\"analysis2.1.pkl\")"
+    "# df.to_pickle(\"analysis2.1.pkl\")"
    ]
   },
   {
