Modify analysis2.2 to include JPG's of varying quality

--- a/analysis2.2.ipynb
+++ b/analysis2.2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "cb160bd1-3f11-4e00-b96d-912708061b0d",
    "metadata": {},
    "outputs": [],
@@ -12,21 +12,20 @@
     "import matplotlib.pyplot as plt\n",
     "import os\n",
     "from scipy.interpolate import griddata\n",
-    "from PIL import Image\n",
-    "\n",
-    "my_dpi = 192"
+    "from PIL import Image"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "9b31bfd3-7a9d-4db3-881d-ea35e8e6ab74",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load in array of 201 images, create dataframe\n",
     "phi = np.load(\"Phi_201snap.npy\")\n",
-    "df = pd.DataFrame(columns=['CR2.2', 'RMSE2.2'], index=np.arange(201))\n",
+    "df = pd.DataFrame(index=np.arange(201))\n",
+    "my_dpi = 192\n",
     "\n",
     "r = np.linspace(1, 101, 101)\n",
     "theta = np.linspace(0, 2 * np.pi, 227)\n",
@@ -48,57 +47,64 @@
     "    \n",
     "    # Interpolate the data to the Cartesian grid\n",
     "    grid_z = griddata(points, values, (grid_x, grid_y), method='nearest')\n",
-    "    \n",
-    "    # Plot and save image as PNG and JPG, reopen JPG as np array\n",
-    "    plt.figure(figsize=(264/my_dpi, 264/my_dpi), dpi=my_dpi)\n",
-    "    plt.imshow(grid_z, extent=(-101, 101, -101, 101), cmap='gray')\n",
-    "    plt.axis(\"off\")\n",
-    "    plt.savefig('analysis2.2.png', bbox_inches='tight', pad_inches=0)\n",
-    "    plt.savefig('analysis2.2.jpg', bbox_inches='tight', pad_inches=0)\n",
-    "    plt.close()\n",
-    "    im = Image.open('analysis2.2.jpg')\n",
-    "    im_array = np.asarray(im)\n",
     "\n",
     "    # Create convert function to use to convert im_array (203x203) back to raw values\n",
     "    phimax, phimin = np.max(grid_z), np.min(grid_z)\n",
     "    ratio = (phimax-phimin)/255\n",
     "    def convertRGBToRaw(x):\n",
     "        return ratio*x + phimin\n",
-    "\n",
-    "    # Loop through im_array and replace RGB by raw in copy (203x203)\n",
-    "    copy = grid_z.copy()\n",
-    "    for row_index, row in enumerate(im_array):\n",
-    "        for col_index, col in enumerate(row):\n",
-    "            copy[row_index][col_index] = convertRGBToRaw(col[0])\n",
-    "\n",
-    "    # Get output_array from copy by computing nearest pixels\n",
-    "    output_array = np.zeros((101, 227))\n",
-    "    for rad in range(101):\n",
-    "        for ang in range(227):\n",
-    "            # Polar coordinates\n",
-    "            radius = r[rad]\n",
-    "            angle = theta[ang]\n",
-    "            \n",
-    "            # Convert to Cartesian coordinates\n",
-    "            x_cart = radius * np.cos(angle)\n",
-    "            y_cart = radius * np.sin(angle)\n",
-    "            \n",
-    "            # Find the nearest pixel in the Cartesian grid\n",
-    "            x_nearest = np.argmin(np.abs(grid_x[0] - x_cart))\n",
-    "            y_nearest = np.argmin(np.abs(grid_y[:, 0] - y_cart))\n",
-    "            \n",
-    "            # Get the raw values from copy and put into output array\n",
-    "            output_array[rad, ang] = copy[y_nearest, x_nearest]\n",
-    "            \n",
-    "    # Compute compression ratio and RMSE's, add to dataframe\n",
-    "    in_imsize = os.stat('analysis2.2.png').st_size\n",
-    "    out_imsize = os.stat('analysis2.2.jpg').st_size\n",
-    "    df.at[i, 'CR2.2'] = in_imsize/out_imsize\n",
     "    \n",
-    "    diff_array = output_array - arr\n",
-    "    rmse = np.sqrt(np.mean(diff_array**2))\n",
-    "    df.at[i, 'RMSE2.2'] = rmse\n",
-    "df.to_pickle(\"analysis2.2.pkl\")"
+    "    # Plot and save image as PNG and JPG, reopen JPG as np array\n",
+    "    plt.figure(figsize=(264/my_dpi, 264/my_dpi), dpi=my_dpi)\n",
+    "    plt.imshow(grid_z, extent=(-101, 101, -101, 101), cmap='gray')\n",
+    "    plt.axis(\"off\")\n",
+    "    plt.savefig('2.2.png', bbox_inches='tight', pad_inches=0)\n",
+    "    \n",
+    "    for q in [100, 75, 50, 25]:\n",
+    "        title = '2.2.' + str(q) + '.jpg'\n",
+    "        plt.savefig(title, bbox_inches='tight', pad_inches=0, dpi=(q*my_dpi/100))\n",
+    "        im = Image.open(title)\n",
+    "        im_array = np.asarray(im)\n",
+    "    \n",
+    "        # Loop through im_array and replace RGB by raw in copy (203x203)\n",
+    "        copy = grid_z.copy()\n",
+    "        for row_index, row in enumerate(im_array):\n",
+    "            for col_index, col in enumerate(row):\n",
+    "                copy[row_index][col_index] = convertRGBToRaw(col[0])\n",
+    "    \n",
+    "        # Get output_array from copy by computing nearest pixels\n",
+    "        output_array = np.zeros((101, 227))\n",
+    "        for rad in range(101):\n",
+    "            for ang in range(227):\n",
+    "                # Polar coordinates\n",
+    "                radius = r[rad]\n",
+    "                angle = theta[ang]\n",
+    "                \n",
+    "                # Convert to Cartesian coordinates\n",
+    "                x_cart = radius * np.cos(angle)\n",
+    "                y_cart = radius * np.sin(angle)\n",
+    "                \n",
+    "                # Find the nearest pixel in the Cartesian grid\n",
+    "                x_nearest = np.argmin(np.abs(grid_x[0] - x_cart))\n",
+    "                y_nearest = np.argmin(np.abs(grid_y[:, 0] - y_cart))\n",
+    "                \n",
+    "                # Get the raw values from copy and put into output array\n",
+    "                output_array[rad, ang] = copy[y_nearest, x_nearest]\n",
+    "                \n",
+    "        # Compute compression ratio and RMSE's, add to dataframe\n",
+    "        in_imsize = os.stat('2.2.png').st_size\n",
+    "        out_imsize = os.stat(title).st_size\n",
+    "        crcol = 'CR2.1.' + str(q)\n",
+    "        df.at[i, crcol] = in_imsize/out_imsize\n",
+    "        \n",
+    "        diff_array = output_array - arr\n",
+    "        rmse = np.sqrt(np.mean(diff_array**2))\n",
+    "        rmsecol = 'RMSE2.1.' + str(q)\n",
+    "        df.at[i, rmsecol] = rmse\n",
+    "    plt.close()\n",
+    "    \n",
+    "# df.to_pickle(\"analysis2.2.pkl\")\n",
+    "df"
    ]
   },
   {
